# llm-role-managers

./: .gitignore  README.md  api文档更新指南.txt  pyproject.toml  run_tests.py  技术架构选型  设计文档  设计文档.md
api_docs/: api_docs.yml
examples/: api_client_test.py  basic_usage.py  role_management.py
resource/db/: llm_roles.db
scripts/: fix_templates.py  init_prompt_tables.py  run_api_server.py  update_template.py
src/llm_roles/api/: __init__.py  prompt_api.py  role_api.py
src/llm_roles/core/: prompt_template.py  role.py
src/llm_roles/database/: base.py  sqlite.py
src/llm_roles/database/scripts/: init_db.py
src/llm_roles/services/: __init__.py  prompt_service.py  role_manager.py
src/llm_roles/web/: api_server.py
src/llm_roles/web/frontend/: README.md  package-lock.json  package.json
src/llm_roles/web/frontend/public/: index.html  manifest.json
src/llm_roles/web/frontend/src/: App.tsx  setupProxy.js
src/llm_roles/web/frontend/src/api/: apiClient.ts.bak  roleService.ts  templateService.ts
src/llm_roles/web/frontend/src/components/Forms/: RoleForm.tsx
src/llm_roles/web/frontend/src/components/Layout/: AppLayout.tsx  Sidebar.tsx
src/llm_roles/web/frontend/src/contexts/: AppContext.tsx
src/llm_roles/web/frontend/src/pages/: RolesPage.tsx  TemplatesPage.tsx
src/llm_roles/web/frontend/src/types/: api.ts
tests/integration/: test_prompt_integration.py
tests/unit/: test_prompt_api.py  test_prompt_service.py  test_prompt_template.py
